updated data-analysis.ipynb there was a bug running logistic regression #2

--- a/notebooks/data-analysis.ipynb
+++ b/notebooks/data-analysis.ipynb
@@ -147,17 +147,25 @@
     "print(f\"Missing registrationdate: {n_reg_missing}\")\n",
     "print(f\"Missing date_received_in_opg: {n_opg_missing}\")\n",
     "\n",
-    "# derive and Define year_month for monthly grouping\n",
+    "# Derive and Define year_month for monthly grouping\n",
     "df['year_month'] = df['date_received_in_opg'].dt.to_period('M').dt.to_timestamp()\n",
     "#df['year'] = df['date_received_in_opg'].dt.to_period('Y').dt.to_timestamp()\n",
     "df['year'] = df['date_received_in_opg'].dt.year\n",
     "df['month'] = df['date_received_in_opg'].dt.month\n",
     "df['day'] = df['date_received_in_opg'].dt.day\n",
     "\n",
-    "# Compute delay in days\n",
+    "# Compute delay_days with null assignment for invalid dates\n",
+    "# If registrationdate is NaT or after receipt, delay_days = NaN\n",
     "df['delay_days'] = (df['date_received_in_opg'] - df['registrationdate']).dt.days\n",
+    "invalid_mask = df['registrationdate'].isna() | (df['registrationdate'] > df['date_received_in_opg'])\n",
+    "df.loc[invalid_mask, 'delay_days'] = pd.NA\n",
+    "\n",
     "# compute “delay in days” and then fill any missing delays with the mean delay for that calendar year \n",
     "# (falling back to the overall mean only if an entire year-group is empty):\n",
+    "\n",
+    "# Filter out invalid or negative delays\n",
+    "# Keep rows where delay_days is non-negative, drop NaN\n",
+    "df = df[df['delay_days'].notna() & (df['delay_days'] >= 0)].copy()\n",
     "\n",
     "# Count number of missing records based on missing values in 'delay_days' \n",
     "n_delays_missing = df['delay_days'].isna().sum()\n",
@@ -254,12 +262,12 @@
     "\n",
     "\n",
     "# Define the target variables among the columns\n",
-    "df[\"target\"] = df['delay_days']\n",
+    "#df[\"target\"] = df['delay_days']\n",
     "# df[\"target\"] = df[\"concern_type\"]\n",
     "\n",
     "### 3.1 Univariate distributions\n",
     "fig, ax = plt.subplots()\n",
-    "df[\"target\"].value_counts().plot(kind=\"bar\", ax=ax)\n",
+    "df[\"delay_days\"].value_counts().plot(kind=\"bar\", ax=ax)\n",
     "plt.title(\"Target distribution\")\n",
     "\n",
     "\n",
@@ -274,26 +282,149 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# 4. Feature Engineering & Modelling: Develop pipelines under the specified headings and record decisions in Markdown.\n",
-    "### 4.1 Train/test split\n",
-    "X = df.drop(\"target\", axis=1)\n",
-    "y = df[\"target\"]\n",
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X, y, test_size=0.2, random_state=RANDOM_STATE\n",
-    ")\n"
+    "\n",
+    "# Define periods and concern types\n",
+    "PERIODS = {\n",
+    "    'Pre-pandemic (2016–17)':   (2017, [2016, 2017]),\n",
+    "    'Spike (2018–19)':          (2019, [2018, 2019]),\n",
+    "    'Pandemic (2020–21)':       (2021, [2020, 2021]),\n",
+    "    'Post-pandemic (2022–23)':  (2023, [2022, 2023]),\n",
+    "}\n",
+    "TYPES = ['Financial', 'Health and Welfare', 'Both']\n",
+    "\n",
+    "# Compute monthly max and min delay in months\n",
+    "# For each month and concern type, the “worst-case” delay expressed in months:\n",
+    "# So after this step, every row belonging to, say, “Financial” in May 2018 \n",
+    "# will have the same number—the largest delay_days observed among all Financial cases received in May 2018.\n",
+    "# Max monthly delay in months\n",
+    "df['max_delay_months'] = df.groupby(['year_month', 'concern_type'])['delay_days']\\\n",
+    "                           .transform('max') / 30.44 # takes each row in a group and \n",
+    "                                                     # replaces its value with the maximum of that group\n",
+    "                                                    # divide by 30.44 (the average length of a month in days) \n",
+    "                                                    # to convert that maximum-day figure into “months of delay.”\n",
+    "# Min monthly delay in months\n",
+    "df['min_delay_months'] = df.groupby(['year_month', 'concern_type'])['delay_days']\\\n",
+    "                           .transform('min') / 30.44\n",
+    "\n",
+    "# Build DataFrame for distributions\n",
+    "records = []\n",
+    "for period, (reg_end, rec_years) in PERIODS.items():\n",
+    "    mask = (\n",
+    "        #(df['registrationdate'].dt.year <= reg_end) &\n",
+    "        df['date_received_in_opg'].dt.year.isin(rec_years) &\n",
+    "        df['concern_type'].isin(TYPES)\n",
+    "    )\n",
+    "    subset = df.loc[mask, ['concern_type', 'delay_days', 'max_delay_months', 'min_delay_months', 'year_month']].copy()\n",
+    "    subset['period'] = period\n",
+    "    records.append(subset)\n",
+    "dist_df = pd.concat(records, ignore_index=True)\n",
+    "dist_df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "9",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "### 4.2 Preprocessing pipelines\n",
+    "df1 = df\n",
+    "df.rename(columns={\n",
+    "    \"delay_days\": \"target\"\n",
+    "}, inplace=True)\n",
+    "\n",
+    "X = df.drop(\"target\", axis=1)\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# 4. Feature Engineering & Modelling: Develop pipelines under the specified headings and record decisions in Markdown.\n",
+    "\n",
+    "X = df.drop(\"target\", axis=1)\n",
+    "y = df[\"target\"]\n",
+    "\n",
+    "\n",
+    "# PCA can’t handle missing values directly. We have two main options:\n",
+    "# Impute the missing values before you scale → PCA\n",
+    "# Drop any rows (or columns) containing NaNs\n",
+    "\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.decomposition import PCA\n",
+    "\n",
+    "# 1. Select numeric columns\n",
+    "num_cols = X.select_dtypes(include=[\"int64\",\"float64\"]).columns\n",
+    "\n",
+    "# 2. Impute missing values (here we use the median)\n",
+    "imputer = SimpleImputer(strategy=\"median\")\n",
+    "X_num_imputed = imputer.fit_transform(X[num_cols])\n",
+    "\n",
+    "# 3. Scale\n",
+    "scaler = StandardScaler()\n",
+    "X_num_scaled = scaler.fit_transform(X_num_imputed)\n",
+    "\n",
+    "# 4. PCA to 90% explained variance\n",
+    "pca = PCA(n_components=0.90, random_state=RANDOM_STATE)\n",
+    "X_pca = pca.fit_transform(X_num_scaled)\n",
+    "\n",
+    "print(f\"PCA reduced {len(num_cols)} → {pca.n_components_} components\")\n",
+    "\n",
+    "# Or as a single Pipeline\n",
+    "# This is handy if you plan to stick it into a larger Pipeline for CV/reproducibility:\n",
+    "# from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "# pca_pipeline = Pipeline([\n",
+    "#     (\"imputer\", SimpleImputer(strategy=\"median\")),\n",
+    "#     (\"scaler\", StandardScaler()),\n",
+    "#     (\"pca\", PCA(n_components=0.90, random_state=RANDOM_STATE)),\n",
+    "# ])\n",
+    "\n",
+    "# # fit + transform in one go\n",
+    "# X_pca = pca_pipeline.fit_transform(X[num_cols])\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X_pca,         # or X_reduced if you use SelectKBest, etc.\n",
+    "    y,             # or y_clean if you dropped rows\n",
+    "    test_size=0.2,\n",
+    "    random_state=RANDOM_STATE\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "# Update your pipelines to force dense output\n",
     "num_feats = X.select_dtypes(include=[\"int64\",\"float64\"]).columns\n",
     "cat_feats = X.select_dtypes(include=[\"object\",\"category\"]).columns\n",
     "\n",
@@ -303,45 +434,25 @@
     "])\n",
     "cat_pipeline = Pipeline([\n",
     "    (\"imputer\", SimpleImputer(strategy=\"most_frequent\")),\n",
-    "    (\"onehot\", OneHotEncoder(handle_unknown=\"ignore\")),\n",
+    "    (\"onehot\", OneHotEncoder(handle_unknown=\"ignore\", sparse=False)),  # <-- note sparse=False\n",
     "])\n",
     "\n",
     "preprocessor = ColumnTransformer([\n",
     "    (\"num\", num_pipeline, num_feats),\n",
     "    (\"cat\", cat_pipeline, cat_feats),\n",
-    "])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### 4.3 Baseline model: Logistic Regression\n",
-    "baseline = Pipeline([\n",
+    "    # optional: sparse_threshold=0  to force dense even if some parts remain sparse\n",
+    "], sparse_threshold=0)\n",
+    "\n",
+    "# Build your full pipeline\n",
+    "full_pipeline = Pipeline([\n",
     "    (\"prep\", preprocessor),\n",
+    "    (\"pca\", PCA(n_components=0.90, random_state=RANDOM_STATE)),\n",
     "    (\"clf\", LogisticRegression(random_state=RANDOM_STATE)),\n",
     "])\n",
-    "scores = cross_val_score(baseline, X_train, y_train, cv=5, scoring=\"roc_auc\")\n",
-    "print(\"Baseline AUC:\", scores.mean())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### 4.4 Advanced model: Random Forest\n",
-    "rf = Pipeline([\n",
-    "    (\"prep\", preprocessor),\n",
-    "    (\"clf\", RandomForestClassifier(n_estimators=100, random_state=RANDOM_STATE)),\n",
-    "])\n",
-    "scores_rf = cross_val_score(rf, X_train, y_train, cv=5, scoring=\"roc_auc\")\n",
-    "print(\"RF AUC:\", scores_rf.mean())\n"
+    "\n",
+    "# Cross-validate on the original DataFrame X, Series y\n",
+    "scores = cross_val_score(full_pipeline, X, y, cv=5, scoring=\"roc_auc\")\n",
+    "print(\"CV AUC:\", scores.mean())"
    ]
   },
   {
