--- a/notebooks/data-analysis.ipynb
+++ b/notebooks/data-analysis.ipynb
@@ -135,11 +135,208 @@
    },
    "outputs": [],
    "source": [
+    "\n",
+    "# data_quality.py\n",
+    "import pandas as pd\n",
+    "from typing import List, Tuple, Optional\n",
+    "\n",
+    "class DataQualityChecks:\n",
+    "    \"\"\"\n",
+    "    A suite of data quality checks and resolution methods.\n",
+    "    \"\"\"\n",
+    "    def __init__(self, filepath: str):\n",
+    "        \"\"\"\n",
+    "        Load the CSV file into a DataFrame.\n",
+    "        :param filepath: Path to the CSV data file\n",
+    "        \"\"\"\n",
+    "        # Read CSV, allow large fields\n",
+    "        self.df = pd.read_csv(filepath, low_memory=False)\n",
+    "\n",
+    "    def summary_statistics(self) -> pd.DataFrame:\n",
+    "        \"\"\"\n",
+    "        Returns summary statistics and info on missing values.\n",
+    "        \"\"\"\n",
+    "        # DataFrame info\n",
+    "        info_buf = []\n",
+    "        self.df.info(buf=info_buf)\n",
+    "        info = ''.join(info_buf)\n",
+    "        # Describe all columns\n",
+    "        desc = self.df.describe(include='all')\n",
+    "        return desc\n",
+    "\n",
+    "    def validate_dates(self, date_cols: List[str]) -> pd.DataFrame:\n",
+    "        \"\"\"\n",
+    "        Ensure specified columns are proper dates, coerce invalids to NaT.\n",
+    "        :param date_cols: List of column names to convert\n",
+    "        \"\"\"\n",
+    "        for col in date_cols:\n",
+    "            # Convert column to datetime, coerces errors to NaT\n",
+    "            self.df[col] = pd.to_datetime(\n",
+    "                self.df[col], errors='coerce', dayfirst=True\n",
+    "            )\n",
+    "        return self.df\n",
+    "    \n",
+    "    def parse_month(month_str: str) -> datetime:\n",
+    "        \"\"\"Strip quotes/whitespace and parse 'YYYY-MM' → datetime.\"\"\"\n",
+    "        cleaned = month_str.strip().strip(\"'\\\"\")\n",
+    "        return datetime.strptime(cleaned, \"%Y-%m\")\n",
+    "\n",
+    "    def generate_month_list(start_month: str, end_month: str):\n",
+    "        \"\"\"\n",
+    "        Return a list of datetime objects for each month-start\n",
+    "        from start_month to end_month inclusive.\n",
+    "        \"\"\"\n",
+    "        start_dt = parse_month(start_month)\n",
+    "        end_dt = parse_month(end_month)\n",
+    "        if start_dt > end_dt:\n",
+    "            raise ValueError(f\"Start month ({start_month}) is after end month ({end_month})\")\n",
+    "\n",
+    "        months = []\n",
+    "        current = start_dt\n",
+    "        while current <= end_dt:\n",
+    "            months.append(current)\n",
+    "            current += relativedelta(months=1)\n",
+    "        return months\n",
+    "\n",
+    "    def last_day_of_month(dt: datetime) -> str:\n",
+    "        \"\"\"\n",
+    "        Return the last day of dt's month as 'YYYY-MM-DD'.\n",
+    "        \"\"\"\n",
+    "        day = calendar.monthrange(dt.year, dt.month)[1]\n",
+    "        return dt.replace(day=day).strftime(\"%Y-%m-%d\")\n",
+    "\n",
+    "    def flag_invalid_delays(self, start_col: str, end_col: str) -> pd.Series:\n",
+    "        \"\"\"\n",
+    "        Flag rows where registration > receipt or either date is missing.\n",
+    "        Returns a boolean mask of invalid rows.\n",
+    "        \"\"\"\n",
+    "        mask = (\n",
+    "            self.df[start_col].isna() |\n",
+    "            self.df[end_col].isna() |\n",
+    "            (self.df[start_col] > self.df[end_col])\n",
+    "        )\n",
+    "        return mask\n",
+    "\n",
+    "    def compute_delay(self, start_col: str, end_col: str, drop_neg: bool=True) -> pd.DataFrame:\n",
+    "        \"\"\"\n",
+    "        Compute delay in days, assign NaN for invalid ones, optionally drop negatives.\n",
+    "        \"\"\"\n",
+    "        # Calculate raw delta in days\n",
+    "        self.df['delay_days'] = (\n",
+    "            self.df[end_col] - self.df[start_col]\n",
+    "        ).dt.days\n",
+    "\n",
+    "        # Invalidate rows where dates are wrong\n",
+    "        invalid = self.flag_invalid_delays(start_col, end_col)\n",
+    "        self.df.loc[invalid, 'delay_days'] = pd.NA\n",
+    "\n",
+    "        # Drop negative or missing delays\n",
+    "        if drop_neg:\n",
+    "            self.df = self.df[\n",
+    "                self.df['delay_days'].notna() & (self.df['delay_days'] >= 0)\n",
+    "            ].copy()\n",
+    "        return self.df\n",
+    "\n",
+    "    def impute_delays(self, date_col: str='registrationdate') -> pd.DataFrame:\n",
+    "        \"\"\"\n",
+    "        Fill missing delays with group-year mean, fallback to overall mean.\n",
+    "        \"\"\"\n",
+    "        # Determine delay year: reg year or receipt year\n",
+    "        self.df['delay_year'] = (\n",
+    "            self.df['registrationdate'].dt.year\n",
+    "            .fillna(self.df['date_received_in_opg'].dt.year)\n",
+    "            .astype(int)\n",
+    "        )\n",
+    "        # Group-wise fill\n",
+    "        self.df['delay_days'] = self.df.groupby('delay_year')['delay_days']\n",
+    "            .transform(lambda s: s.fillna(s.mean()))\n",
+    "        # Fill any remaining with overall mean\n",
+    "        overall = self.df['delay_days'].mean()\n",
+    "        self.df['delay_days'] = self.df['delay_days'].fillna(overall)\n",
+    "        # Clean up\n",
+    "        self.df.drop(columns=['delay_year'], inplace=True)\n",
+    "        return self.df\n",
+    "\n",
+    "    def derive_keys(self, id_cols: Tuple[str,str]) -> pd.DataFrame:\n",
+    "        \"\"\"\n",
+    "        Build a hybrid derived_id: (case_no + date) or unique_id fallback.\n",
+    "        :param id_cols: Tuple of (case_no_col, unique_id_col)\n",
+    "        \"\"\"\n",
+    "        c_no, u_id = id_cols\n",
+    "        def make_id(row):\n",
+    "            if pd.notna(row[c_no]) and str(row[c_no]).strip():\n",
+    "                date_str = row['date_received_in_opg'].strftime('%Y%m%d')\n",
+    "                return f\"{row[c_no]}_{date_str}\"\n",
+    "            return str(row[u_id])\n",
+    "        self.df['derived_id'] = self.df.apply(make_id, axis=1)\n",
+    "        return self.df\n",
+    "\n",
+    "    def remove_duplicates(self) -> pd.DataFrame:\n",
+    "        \"\"\"\n",
+    "        Drop duplicate rows based on 'derived_id', keep first occurrence.\n",
+    "        \"\"\"\n",
+    "        self.df = self.df.drop_duplicates(subset='derived_id', keep='first')\n",
+    "        return self.df\n",
+    "\n",
+    "    def run_all_checks(self) -> pd.DataFrame:\n",
+    "        \"\"\"\n",
+    "        Executes full pipeline of validation, delay compute, impute, dedup.\n",
+    "        \"\"\"\n",
+    "        # 1. Validate date formats\n",
+    "        self.validate_dates(['registrationdate','date_received_in_opg'])\n",
+    "        # 2. Compute and clean delays\n",
+    "        self.compute_delay('registrationdate','date_received_in_opg')\n",
+    "        # 3. Impute missing delays\n",
+    "        self.impute_delays()\n",
+    "        # 4. Derive keys & remove duplicates\n",
+    "        self.derive_keys(('case_no','unique_id'))\n",
+    "        self.remove_duplicates()\n",
+    "        return self.df\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df[df['registrationdate'].isna() | \n",
+    "   df['date_received_in_opg'].isna() | \n",
+    "   (df['registrationdate'] > df['date_received_in_opg'])][['case_no', 'registrationdate', 'date_received_in_opg']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df[df['registrationdate'].isna()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "#### 2.3.1 Validation: **Correct format** \n",
     "# Convert to correct format \n",
     "for col in ['registrationdate', 'date_received_in_opg']:\n",
-    "    df[col] = pd.to_datetime(df[col], errors='coerce', dayfirst=True) # force an out-of-bounds date to NaT, in addition to forcing non-dates (or non-parseable dates) to NaT\n",
-    "# parses dates with the day first, e.g. \"10/11/12\" is parsed as 2012-11-10, yearfirst=True is not strict, but will prefer to parse with year first.\n",
+    "    df[col] = pd.to_datetime(df[col], errors='coerce', dayfirst=True) # force an out-of-bounds date to NaT, \n",
+    "    # in addition to forcing non-dates (or non-parseable dates) to NaT\n",
+    "    # parses dates with the day first, e.g. \"10/11/12\" is parsed as 2012-11-10, yearfirst=True is not strict, \n",
+    "    # but will prefer to parse with year first.\n",
     "\n",
     "# Count number of missing records based on missing values in 'registrationdate' 'date_received_in_opg'\n",
     "n_reg_missing = df['registrationdate'].isna().sum()\n",
@@ -157,7 +354,9 @@
     "# Compute delay_days with null assignment for invalid dates\n",
     "# If registrationdate is NaT or after receipt, delay_days = NaN\n",
     "df['delay_days'] = (df['date_received_in_opg'] - df['registrationdate']).dt.days\n",
-    "invalid_mask = df['registrationdate'].isna() | (df['registrationdate'] > df['date_received_in_opg'])\n",
+    "invalid_mask = (df['registrationdate'].isna()) | \n",
+    "                (df['date_received_in_opg'].isna()) | \n",
+    "                \n",
     "df.loc[invalid_mask, 'delay_days'] = pd.NA\n",
     "\n",
     "# compute “delay in days” and then fill any missing delays with the mean delay for that calendar year \n",
@@ -208,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "8",
    "metadata": {
     "tags": []
    },
@@ -237,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "9",
    "metadata": {
     "tags": []
    },
@@ -252,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "10",
    "metadata": {
     "tags": []
    },
@@ -281,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "11",
    "metadata": {
     "tags": []
    },
@@ -329,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "12",
    "metadata": {
     "tags": []
    },
@@ -347,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "13",
    "metadata": {
     "tags": []
    },
@@ -410,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "14",
    "metadata": {
     "tags": []
    },
@@ -458,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +674,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "16",
    "metadata": {},
    "source": [
     "### 5.2 Insights & Recommendations\n",
