updated gitignore, tests

--- a/notebooks/corr_cause.ipynb
+++ b/notebooks/corr_cause.ipynb
@@ -8,20 +8,20 @@
    "outputs": [],
    "source": [
     "#!/usr/bin/env python3\n",
-    "\"\"\"\n",
-    "analysers.py\n",
+    "# \"\"\"\n",
+    "# analysers.py\n",
     "\n",
-    "A module providing object‑oriented classes for statistical analysis:\n",
-    " - Correlation (Pearson, Spearman)\n",
-    " - Mendelian Randomization (2‑stage least squares)\n",
-    " - Causality tests (Conditional Mutual Information, Transfer Entropy, Granger Causality)\n",
+    "# A module providing object‑oriented classes for statistical analysis:\n",
+    "#  - Correlation (Pearson, Spearman)\n",
+    "#  - Mendelian Randomization (2‑stage least squares)\n",
+    "#  - Causality tests (Conditional Mutual Information, Transfer Entropy, Granger Causality)\n",
     "\n",
-    "Usage (from shell):\n",
-    "    python src/analysers.py --help\n",
+    "# Usage (from shell):\n",
+    "#     python src/analysers.py --help\n",
     "\n",
-    "Or import in a notebook:\n",
-    "    from src.analysers import CorrelationAnalyser, RandomizationAnalyser, CausalityAnalyser\n",
-    "\"\"\"\n",
+    "# Or import in a notebook:\n",
+    "#     from src.analysers import CorrelationAnalyser, RandomizationAnalyser, CausalityAnalyser\n",
+    "# \"\"\"\n",
     "\n",
     "import numpy as np                                  # Numerical operations\n",
     "import pandas as pd                                 # DataFrame handling\n",
