--- a/notebooks/data-analysis.ipynb
+++ b/notebooks/data-analysis.ipynb
@@ -299,32 +299,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "df[df['registrationdate'].isna() | \n",
-    "   df['date_received_in_opg'].isna() | \n",
-    "   (df['registrationdate'] > df['date_received_in_opg'])][['case_no', 'registrationdate', 'date_received_in_opg']]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "6",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "df[df['registrationdate'].isna()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7",
    "metadata": {
     "tags": []
    },
@@ -356,7 +338,11 @@
     "df['delay_days'] = (df['date_received_in_opg'] - df['registrationdate']).dt.days\n",
     "invalid_mask = (df['registrationdate'].isna()) | \n",
     "                (df['date_received_in_opg'].isna()) | \n",
-    "                \n",
+    "\n",
+    "# print(df[df['registrationdate'].isna() | \n",
+    "#    df['date_received_in_opg'].isna() | \n",
+    "#    (df['registrationdate'] > df['date_received_in_opg'])][['case_no', 'registrationdate', 'date_received_in_opg']])\n",
+    "\n",
     "df.loc[invalid_mask, 'delay_days'] = pd.NA\n",
     "\n",
     "# compute “delay in days” and then fill any missing delays with the mean delay for that calendar year \n",
@@ -407,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "7",
    "metadata": {
     "tags": []
    },
@@ -436,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "8",
    "metadata": {
     "tags": []
    },
@@ -451,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "9",
    "metadata": {
     "tags": []
    },
@@ -480,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "10",
    "metadata": {
     "tags": []
    },
@@ -528,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "11",
    "metadata": {
     "tags": []
    },
@@ -546,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "12",
    "metadata": {
     "tags": []
    },
@@ -609,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "13",
    "metadata": {
     "tags": []
    },
@@ -657,7 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16",
+   "id": "15",
    "metadata": {},
    "source": [
     "### 5.2 Insights & Recommendations\n",
