changed unit testing file and data quality and created leila-yousefi notebook

--- a/notebooks/data-analysis.ipynb
+++ b/notebooks/data-analysis.ipynb
@@ -130,6 +130,25 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    Example:\n",
+    "        dq = DataQualityChecks('data.csv')\n",
+    "        dq.validate_dates(['registrationdate', 'date_received_in_opg'])\n",
+    "        dq.compute_delay('registrationdate', 'date_received_in_opg')\n",
+    "        dq.impute_delays()\n",
+    "        # Apply business-specific consistency checks\n",
+    "        issues = dq.check_consistency()\n",
+    "        if issues:\n",
+    "            print(issues)\n",
+    "        df_clean = dq.run_all_checks()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
    "metadata": {
     "tags": []
    },
@@ -298,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -306,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "7",
    "metadata": {
     "tags": []
    },
@@ -393,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {
     "tags": []
    },
@@ -422,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
    "metadata": {
     "tags": []
    },
@@ -437,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "10",
    "metadata": {
     "tags": []
    },
@@ -466,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {
     "tags": []
    },
@@ -514,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {
     "tags": []
    },
@@ -532,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {
     "tags": []
    },
@@ -595,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {
     "tags": []
    },
@@ -643,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +679,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "source": [
     "### 5.2 Insights & Recommendations\n",
